Removed powerups made in blueprints.

--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -49,7 +49,7 @@ CameraSpeed=3
 LastLevel=/Game/maps/VoidMap
 
 [ModuleFileTracking]
-CoopGame.TimeStamp=2020.04.29-19.00.40
+CoopGame.TimeStamp=2020.04.29-19.04.43
 CoopGame.LastCompileMethod=External
 PakFile.TimeStamp=2019.12.20-23.26.51
 PakFile.LastCompileMethod=Unknown
@@ -3667,9 +3667,15 @@ bpwoe_C.Tags=True
 bpwoe_C.ComponentReplication=True
 bpwoe_C.Cooking=True
 bpwoe_C.Events=True
+BP_HealthRegenerationPowerup2_C.ComponentTick=True
+BP_HealthRegenerationPowerup2_C.RotatingComponent=True
+BP_HealthRegenerationPowerup2_C.PlanarMovement=True
+BP_HealthRegenerationPowerup2_C.MovementComponent=True
+BP_HealthRegenerationPowerup2_C.Activation=True
+BP_SuperSpeedPowerup2_C.ComponentTick=True
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
 
 [RootWindow]
@@ -3703,7 +3709,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Powerups/c++
+ContentBrowserTab1.SelectedPaths=/Game/Powerups
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -3924,8 +3930,8 @@ REINST_BP_TrackerBot_C_53="\"Object.Components.meshComp.Object.Lighting.Lightmas
 REINST_BP_TrackerBot_C_35="\"Object.Components.meshComp.Object.Lighting.LightmassSettings\" \"Object.Components.meshComp.Object.Lighting.LightingChannels\" \"Object.Components.meshComp.Object.Collision.BodyInstance\" "
 MaterialExpressionScalarParameter="\"Object.DefaultValue\" "
 REINST_BP_ExplosiveBarrel_C_47="\"Object.Components.mesh.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-BP_TestPickup_C="\"Object.Components.decalComp\" "
-SPickupActor="\"Object.Components.decalComp\" "
+BP_TestPickup_C=
+SPickupActor=
 REINST_BP_TestPickup_C_37="\"Object.Components.decalComp\" \"Object.Components.decalComp.Object.Decal\" "
 REINST_BP_TestPickup_C_45="\"Object.Components.overlapSphere\" \"Object.Components.overlapSphere.Object.Shape\" \"Object.Components.overlapSphere.Object.Shape.ShapeColor\" \"Object.Components.overlapSphere.Object.Collision\" \"Object.Components.decalComp\" \"Object.Components.decalComp.Object.Decal\" "
 REINST_BP_TestPickup_C_49="\"Object.Components.overlapSphere\" \"Object.Components.overlapSphere.Object.Shape\" \"Object.Components.overlapSphere.Object.Shape.ShapeColor\" \"Object.Components.overlapSphere.Object.Collision\" \"Object.Components.decalComp\" \"Object.Components.decalComp.Object.Decal\" "
@@ -3960,6 +3966,7 @@ REINST_BP_HealthRegenerationPowerup2_C_91="\"Object.Components.mesh\" \"Object.C
 bppow_C="\"Object.Components.mesh\" \"Object.Components.mesh.Object.StaticMesh\" \"Object.Components.mesh.Object.Rendering\" \"Object.Components.mesh.Object.Lighting\" \"Object.Components.pointLight\" \"Object.Components.pointLight.Object.Light.LightColor\" "
 bppower_C="\"Object.Components.mesh\" \"Object.Components.mesh.Object.StaticMesh\" \"Object.Components.mesh.Object.Rendering\" \"Object.Components.mesh.Object.Lighting\" \"Object.Components.pointLight\" \"Object.Components.pointLight.Object.Light.LightColor\" "
 bpwoe_C="\"Object.Components.mesh\" \"Object.Components.mesh.Object.StaticMesh\" \"Object.Components.mesh.Object.Rendering\" \"Object.Components.mesh.Object.Lighting\" \"Object.Components.pointLight\" \"Object.Components.pointLight.Object.Light.LightColor\" "
+REINST_BP_HealthRegenerationPowerup2_C_47="\"Object.Components.mesh\" \"Object.Components.mesh.Object.StaticMesh\" \"Object.Components.mesh.Object.Rendering\" \"Object.Components.mesh.Object.Lighting\" \"Object.Components.pointLight\" \"Object.Components.pointLight.Object.Light.LightColor\" "
 
 [PlacementMode]
 RecentlyPlaced=/Game/TrackerBot/BP_TrackerBot.BP_TrackerBot;
@@ -3981,26 +3988,26 @@ RecentlyPlaced=/Game/Weapons/Effects/BasicTracer/P_SmokeTrail.P_SmokeTrail;
 RecentlyPlaced=/Game/Blueprints/BP_TargetDummy.BP_TargetDummy;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Powerups/c++/NewBlueprint
-MRUItem1=/Game/Powerups/c++/bpwoe
-MRUItem2=/Game/Powerups/c++/bppower
+MRUItem0=/Game/Powerups/BP_HealthRegenerationPowerup2
+MRUItem1=/Game/Powerups/c++/BP_HealthRegenerationPowerup2
+MRUItem2=/Game/Powerups/c++/BP_SuperSpeedPowerup2
 MRUItem3=/Game/Powerups/Pickup/BP_TestPickup
-MRUItem4=/Game/Powerups/c++/bppow
-MRUItem5=/Game/Blueprints/Characters/BP_PlayerPawn
-MRUItem6=/Game/Blueprints/Characters/BP_TargetDummy
-MRUItem7=/Game/TrackerBot/BP_TrackerBot
-MRUItem8=/Game/Powerups/BP_PowerupBase
-MRUItem9=/Game/Powerups/BP_HealthRegenerationPowerup
-MRUItem10=/Game/Powerups/c++/BP_HealthRegenerationPowerup2
-MRUItem11=/Game/Powerups/BP_SuperSpeedPowerup
-MRUItem12=/Game/Powerups/c++/NewBlueprint1
-MRUItem13=/Game/Powerups/c++/BP_SuperSpeedPowerup2
-MRUItem14=/Game/Blueprints/Miscellaneous/BP_ExplosiveBarrel
-MRUItem15=/Game/Powerups/c++/BP_PowerupActorBaseC
-MRUItem16=/Game/Powerups/MI_HealthRegeneration
-MRUItem17=/Game/Powerups/M_Powerup
-MRUItem18=/Game/Powerups/MI_PowerupSuperSpeed
-MRUItem19=/Game/Powerups/Meshes/SpeedIcon
+MRUItem4=/Game/Powerups/c++/NewBlueprint
+MRUItem5=/Game/Powerups/c++/bpwoe
+MRUItem6=/Game/Powerups/c++/bppower
+MRUItem7=/Game/Powerups/c++/bppow
+MRUItem8=/Game/Blueprints/Characters/BP_PlayerPawn
+MRUItem9=/Game/Blueprints/Characters/BP_TargetDummy
+MRUItem10=/Game/TrackerBot/BP_TrackerBot
+MRUItem11=/Game/Powerups/BP_PowerupBase
+MRUItem12=/Game/Powerups/BP_HealthRegenerationPowerup
+MRUItem13=/Game/Powerups/BP_SuperSpeedPowerup
+MRUItem14=/Game/Powerups/c++/NewBlueprint1
+MRUItem15=/Game/Blueprints/Miscellaneous/BP_ExplosiveBarrel
+MRUItem16=/Game/Powerups/c++/BP_PowerupActorBaseC
+MRUItem17=/Game/Powerups/MI_HealthRegeneration
+MRUItem18=/Game/Powerups/M_Powerup
+MRUItem19=/Game/Powerups/MI_PowerupSuperSpeed
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/BP_PlayerPawn.BP_PlayerPawn=0
@@ -4069,6 +4076,7 @@ MRUItem19=/Game/Powerups/Meshes/SpeedIcon
 /Game/Powerups/c++/NewBlueprint.NewBlueprint=0
 /Game/Powerups/c++/BP_SuperSpeedPowerup2.BP_SuperSpeedPowerup2=0
 /Game/Blueprints/Characters/BP_TargetDummy.BP_TargetDummy=0
+/Game/Powerups/BP_HealthRegenerationPowerup2.BP_HealthRegenerationPowerup2=0
 
 [/Script/UnrealEd.PersonaOptions]
 bAutoAlignFloorToMesh=True
@@ -4110,7 +4118,7 @@ OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=DataValidation
 
 [/Script/UnrealEd.CascadeOptions]
 ModuleColor_Beam_Unselected=(B=235,G=150,R=160,A=0)
