pickup object instance wasn't destroyed when overlapping the pickup actor.

--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -12,7 +12,7 @@ SwarmIntermediateFolder=C:/unreal projects/TomLooman/UE4_MasteryCourse_CoopGame/
 bShowCompilerLogOnCompileError=False
 DataSourceFolder=(Path="")
 bAnimationReimportWarnings=False
-bSCSEditorShowFloor=False
+bSCSEditorShowFloor=True
 SCSViewportCameraSpeed=3
 AssetViewerProfileName=
 MaterialQualityLevel=1
@@ -49,8 +49,8 @@ CameraSpeed=3
 LastLevel=/Game/maps/VoidMap
 
 [ModuleFileTracking]
-CoopGame.TimeStamp=2020.04.29-19.28.00
-CoopGame.LastCompileMethod=Runtime
+CoopGame.TimeStamp=2020.04.29-22.18.14
+CoopGame.LastCompileMethod=External
 PakFile.TimeStamp=2019.12.20-23.26.51
 PakFile.LastCompileMethod=Unknown
 RSA.TimeStamp=2019.12.20-23.26.56
@@ -3673,9 +3673,47 @@ BP_HealthRegenerationPowerup2_C.PlanarMovement=True
 BP_HealthRegenerationPowerup2_C.MovementComponent=True
 BP_HealthRegenerationPowerup2_C.Activation=True
 BP_SuperSpeedPowerup2_C.ComponentTick=True
+BP_PowerupPickup_C.Tick=True
+BP_PowerupPickup_C.Rendering=True
+BP_PowerupPickup_C.Replication=True
+BP_PowerupPickup_C.Input=True
+BP_PowerupPickup_C.Actor=True
+BP_PowerupPickup_C.Variable=True
+BP_PowerupPickup_C.TransformCommon=True
+BP_PowerupPickup_C.Sockets=True
+BP_PowerupPickup_C.Shape=True
+BP_PowerupPickup_C.Navigation=True
+BP_PowerupPickup_C.Physics=True
+BP_PowerupPickup_C.Collision=True
+BP_PowerupPickup_C.Tags=True
+BP_PowerupPickup_C.ComponentReplication=True
+BP_PowerupPickup_C.Cooking=True
+BP_PowerupPickup_C.Events=True
+BP_PowerupPickup_C.Decal=True
+REINST_BP_PowerupPickup_C_36.Tick=True
+REINST_BP_PowerupPickup_C_36.Rendering=True
+REINST_BP_PowerupPickup_C_36.Replication=True
+REINST_BP_PowerupPickup_C_36.Input=True
+REINST_BP_PowerupPickup_C_36.Actor=True
+BP_WeaponPickup_C.Tick=True
+BP_WeaponPickup_C.Rendering=True
+BP_WeaponPickup_C.Replication=True
+BP_WeaponPickup_C.Input=True
+BP_WeaponPickup_C.Actor=True
+REINST_BP_WeaponPickup_C_41.Tick=True
+REINST_BP_WeaponPickup_C_41.Rendering=True
+REINST_BP_WeaponPickup_C_41.Replication=True
+REINST_BP_WeaponPickup_C_41.Input=True
+REINST_BP_WeaponPickup_C_41.Actor=True
+BP_PowerupPickup_C.Pickup Actor=True
+DecalComponent.TransformCommon=True
+DecalComponent.Decal=True
+DecalComponent.Rendering=True
+DecalComponent.Tags=True
+DecalComponent.Cooking=True
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
 
 [RootWindow]
@@ -3871,9 +3909,9 @@ DataAsset="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 SkeletalMeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" "
 SkinnedMeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" "
 MeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" "
-PrimitiveComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" "
-SceneComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" "
-ActorComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" "
+PrimitiveComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" "
+SceneComponent=
+ActorComponent=
 ParticleModuleColorOverLife="\"Object.Color.ColorOverLife.Distribution\" \"Object.Color.AlphaOverLife\" \"Object.Color.AlphaOverLife.Distribution\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points.Points[0]\" "
 ParticleModuleColorBase="\"Object.Color.ColorOverLife.Distribution\" \"Object.Color.AlphaOverLife\" \"Object.Color.AlphaOverLife.Distribution\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points.Points[0]\" "
 ParticleModule="\"Object.Color.ColorOverLife.Distribution\" \"Object.Color.AlphaOverLife\" \"Object.Color.AlphaOverLife.Distribution\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points.Points[0]\" "
@@ -3906,11 +3944,11 @@ BP_ExplosiveBarrel_C=
 SExplosiveBarrel=
 REINST_BP_ExplosiveBarrel_C_33=
 CapsuleComponent="\"Object.Collision.BodyInstance\" "
-ShapeComponent="\"Object.Collision.BodyInstance\" "
+ShapeComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" "
 REINST_BP_PlayerPawn_C_33="\"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 REINST_BP_PlayerPawn_C_37="\"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 StaticMeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
-SphereComponent="\"Object.Collision.BodyInstance\" "
+SphereComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" "
 RadialForceComponent="\"Object.RadialForceComponent.ObjectTypesToAffect\" "
 WBP_SimpleCrosshair_C="\"Object.Appearance.ColorAndOpacity\" "
 WBP_AmmoInfo_C="\"Object.Appearance.ColorAndOpacity\" "
@@ -3969,6 +4007,7 @@ bpwoe_C="\"Object.Components.mesh\" \"Object.Components.mesh.Object.StaticMesh\"
 REINST_BP_HealthRegenerationPowerup2_C_47="\"Object.Components.mesh\" \"Object.Components.mesh.Object.StaticMesh\" \"Object.Components.mesh.Object.Rendering\" \"Object.Components.mesh.Object.Lighting\" \"Object.Components.pointLight\" \"Object.Components.pointLight.Object.Light.LightColor\" "
 
 [PlacementMode]
+RecentlyPlaced=/Game/Powerups/Pickup/BP_PowerupPickup.BP_PowerupPickup;
 RecentlyPlaced=/Game/TrackerBot/BP_TrackerBot.BP_TrackerBot;
 RecentlyPlaced=/Game/Powerups/Pickup/BP_TestPickup.BP_TestPickup;
 RecentlyPlaced=/Game/Powerups/BP_SuperSpeedPowerup.BP_SuperSpeedPowerup;
@@ -3988,26 +4027,26 @@ RecentlyPlaced=/Game/Weapons/Effects/BasicTracer/P_SmokeTrail.P_SmokeTrail;
 RecentlyPlaced=/Game/Blueprints/BP_TargetDummy.BP_TargetDummy;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Powerups/BP_HealthRegenerationPowerup2
-MRUItem1=/Game/Powerups/c++/BP_HealthRegenerationPowerup2
-MRUItem2=/Game/Powerups/c++/BP_SuperSpeedPowerup2
-MRUItem3=/Game/Powerups/Pickup/BP_TestPickup
-MRUItem4=/Game/Powerups/c++/NewBlueprint
-MRUItem5=/Game/Powerups/c++/bpwoe
-MRUItem6=/Game/Powerups/c++/bppower
-MRUItem7=/Game/Powerups/c++/bppow
-MRUItem8=/Game/Blueprints/Characters/BP_PlayerPawn
-MRUItem9=/Game/Blueprints/Characters/BP_TargetDummy
-MRUItem10=/Game/TrackerBot/BP_TrackerBot
-MRUItem11=/Game/Powerups/BP_PowerupBase
-MRUItem12=/Game/Powerups/BP_HealthRegenerationPowerup
-MRUItem13=/Game/Powerups/BP_SuperSpeedPowerup
-MRUItem14=/Game/Powerups/c++/NewBlueprint1
-MRUItem15=/Game/Blueprints/Miscellaneous/BP_ExplosiveBarrel
-MRUItem16=/Game/Powerups/c++/BP_PowerupActorBaseC
-MRUItem17=/Game/Powerups/MI_HealthRegeneration
-MRUItem18=/Game/Powerups/M_Powerup
-MRUItem19=/Game/Powerups/MI_PowerupSuperSpeed
+MRUItem0=/Game/Powerups/Pickup/BP_WeaponPickup
+MRUItem1=/Game/Powerups/Pickup/BP_TestPickup
+MRUItem2=/Game/Powerups/Pickup/BP_PowerupPickup
+MRUItem3=/Game/Powerups/BP_HealthRegenerationPowerup2
+MRUItem4=/Game/Powerups/c++/BP_HealthRegenerationPowerup2
+MRUItem5=/Game/Powerups/c++/BP_SuperSpeedPowerup2
+MRUItem6=/Game/Powerups/c++/NewBlueprint
+MRUItem7=/Game/Powerups/c++/bpwoe
+MRUItem8=/Game/Powerups/c++/bppower
+MRUItem9=/Game/Powerups/c++/bppow
+MRUItem10=/Game/Blueprints/Characters/BP_PlayerPawn
+MRUItem11=/Game/Blueprints/Characters/BP_TargetDummy
+MRUItem12=/Game/TrackerBot/BP_TrackerBot
+MRUItem13=/Game/Powerups/BP_PowerupBase
+MRUItem14=/Game/Powerups/BP_HealthRegenerationPowerup
+MRUItem15=/Game/Powerups/BP_SuperSpeedPowerup
+MRUItem16=/Game/Powerups/c++/NewBlueprint1
+MRUItem17=/Game/Blueprints/Miscellaneous/BP_ExplosiveBarrel
+MRUItem18=/Game/Powerups/c++/BP_PowerupActorBaseC
+MRUItem19=/Game/Powerups/MI_HealthRegeneration
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/BP_PlayerPawn.BP_PlayerPawn=0
