fixed ammo info widget trying to access weapons that were pending on being killed.

--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -3729,6 +3729,7 @@ BP_WeaponPickup_C.Pickup Actor=True
 [AssetEditorManager]
 CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
+OpenAssetsAtExit=/Game/UI/WBP_AmmoInfo.WBP_AmmoInfo
 
 [RootWindow]
 ScreenPosition=X=470.000 Y=198.000
@@ -3761,7 +3762,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Powerups
+ContentBrowserTab1.SelectedPaths=/Game/UI
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -3882,7 +3883,7 @@ K2Node_VariableSet=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Rend
 ObjectProperty=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Rendering.TextureStreaming,BP_PlayerPawn_C.Rendering.LOD,BP_PlayerPawn_C.Collision.Collision,
 PhysicsConstraintTemplate=PhysicsConstraintTemplate.Angular Limits.Swing Limits,PhysicsConstraintTemplate.Angular Limits.Twist Limits,PhysicsConstraintTemplate.LinearMotor.Linear Position Drive,PhysicsConstraintTemplate.LinearMotor.Linear Velocity Drive,PhysicsConstraintTemplate.AngularMotor.Orientation Drive,PhysicsConstraintTemplate.AngularMotor.Velocity Drive,
 BP_GrenadeProjectile_C=BP_GrenadeProjectile_C.Collision.Collision,
-SWeapon=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Rendering.TextureStreaming,BP_PlayerPawn_C.Rendering.LOD,BP_PlayerPawn_C.Collision.Collision,
+SWeapon=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Rendering.TextureStreaming,BP_PlayerPawn_C.Rendering.LOD,BP_PlayerPawn_C.Collision.Collision,BP_TrackerBot_C.Physics.ConstraintsGroup,BP_TrackerBot_C.Rendering.TextureStreaming,BP_TrackerBot_C.Rendering.LOD,
 SCharacter=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Rendering.TextureStreaming,BP_PlayerPawn_C.Rendering.LOD,BP_PlayerPawn_C.Collision.Collision,
 Character=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Rendering.TextureStreaming,BP_PlayerPawn_C.Rendering.LOD,BP_PlayerPawn_C.Collision.Collision,
 BP_CharacterAnimation_C=
