Rebased the game mode in the editor. Enabled the Environment Query System. Created a query system.

--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -727,6 +727,8 @@ StaticMeshEditor.TimeStamp=2019.12.20-23.27.00
 StaticMeshEditor.LastCompileMethod=Unknown
 PerfCounters.TimeStamp=2019.12.20-23.26.51
 PerfCounters.LastCompileMethod=Unknown
+EnvironmentQueryEditor.TimeStamp=2019.12.20-23.26.38
+EnvironmentQueryEditor.LastCompileMethod=Unknown
 
 [DetailCategories]
 WorldSettings.PrecomputedVisibility=True
@@ -3727,8 +3729,10 @@ BP_WeaponPickup_C.Events=True
 BP_WeaponPickup_C.Pickup Actor=True
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
+OpenAssetsAtExit=/Game/Blueprints/GameModes/BP_TestGameMode.BP_TestGameMode
+OpenAssetsAtExit=/Game/Blueprints/GameModes/EQS_FindSpawnLocation.EQS_FindSpawnLocation
 
 [RootWindow]
 ScreenPosition=X=470.000 Y=198.000
@@ -3761,7 +3765,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Classes_Game/CoopGame/Public
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints/GameModes
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -3911,7 +3915,7 @@ SCharacter="\"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeO
 Character="\"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 Pawn=
 REINST_BP_PlayerPawn_C_34="\"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
+EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.AutoReimport.AutoReimportDirectorySettings\" \"Object.AutoReimport.AutoReimportDirectorySettings.AutoReimportDirectorySettings[0]\" \"Object.AutoReimport.AutoReimportDirectorySettings.AutoReimportDirectorySettings[0].Wildcards\" \"Object.Blueprints\" \"Object.AutoSave\" "
 CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 REINST_BP_PlayerPawn_C_26="\"Object.Components.cameraComponent.Object.PostProcess.PostProcessSettings\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
@@ -4019,6 +4023,11 @@ bppow_C="\"Object.Components.mesh\" \"Object.Components.mesh.Object.StaticMesh\"
 bppower_C="\"Object.Components.mesh\" \"Object.Components.mesh.Object.StaticMesh\" \"Object.Components.mesh.Object.Rendering\" \"Object.Components.mesh.Object.Lighting\" \"Object.Components.pointLight\" \"Object.Components.pointLight.Object.Light.LightColor\" "
 bpwoe_C="\"Object.Components.mesh\" \"Object.Components.mesh.Object.StaticMesh\" \"Object.Components.mesh.Object.Rendering\" \"Object.Components.mesh.Object.Lighting\" \"Object.Components.pointLight\" \"Object.Components.pointLight.Object.Light.LightColor\" "
 REINST_BP_HealthRegenerationPowerup2_C_47="\"Object.Components.mesh\" \"Object.Components.mesh.Object.StaticMesh\" \"Object.Components.mesh.Object.Rendering\" \"Object.Components.mesh.Object.Lighting\" \"Object.Components.pointLight\" \"Object.Components.pointLight.Object.Light.LightColor\" "
+EditorStyleSettings="\"Object.Colors.EditorMainWindowBackgroundOverride\" \"Object.Colors.EditorMainWindowBackgroundOverride.TintColor\" \"Object.Colors.EditorChildWindowBackgroundOverride\" \"Object.Colors.EditorChildWindowBackgroundOverride.TintColor\" "
+EditorTutorialSettings="\"Object.Tutorials.Categories\" \"Object.Tutorials.Categories.Categories[0]\" \"Object.Tutorials.Categories.Categories[1]\" \"Object.Tutorials.Categories.Categories[2]\" \"Object.Tutorials.Categories.Categories[3]\" \"Object.Tutorials.Categories.Categories[4]\" \"Object.Tutorials.Categories.Categories[5]\" \"Object.Tutorials.Categories.Categories[6]\" \"Object.Tutorials.Categories.Categories[7]\" \"Object.Tutorials.Categories.Categories[8]\" \"Object.Tutorials.TutorialContexts\" \"Object.Tutorials.TutorialContexts.TutorialContexts[0]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[1]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[2]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[3]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[4]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[5]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[6]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[7]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[8]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[9]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[10]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[11]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[12]\" "
+LevelEditorViewportSettings="\"Object.GridSnapping.DecimalGridSizes\" \"Object.GridSnapping.DecimalGridIntervals\" \"Object.GridSnapping.Pow2GridSizes\" \"Object.GridSnapping.Pow2GridIntervals\" \"Object.GridSnapping.CommonRotGridSizes\" \"Object.GridSnapping.DivisionsOf360RotGridSizes\" \"Object.GridSnapping.ScalingGridSizes\" \"Object.Preview.PreviewMeshes\" "
+PersonaOptions="\"Object.Preview Scene.Preview Scene|AdditionalMesh\" "
+AutomationTestSettings="\"Object.Loading.EditorTestModules\" \"Object.Automation.BuildPromotionTest\" \"Object.Automation.BuildPromotionTest.ImportWorkflow\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.Diffuse\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.Normal\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.StaticMesh\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.ReimportStaticMesh\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.BlendShapeMesh\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.MorphMesh\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.SkeletalMesh\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.Animation\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.Sound\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.SurroundSound\" \"Object.Automation.BuildPromotionTest.OpenAssets\" \"Object.Automation.BuildPromotionTest.NewProjectSettings\" \"Object.Automation.MaterialEditorPromotionTest\" \"Object.Automation.ParticleEditorPromotionTest\" \"Object.Automation.BlueprintEditorPromotionTest\" \"Object.MiscAutomationSetups.TestLevelFolders\" "
 
 [PlacementMode]
 RecentlyPlaced=/Game/Powerups/Pickup/BP_WeaponPickup.BP_WeaponPickup;
@@ -4042,26 +4051,26 @@ RecentlyPlaced=/Game/Weapons/Effects/BasicTracer/P_SmokeTrail.P_SmokeTrail;
 RecentlyPlaced=/Game/Blueprints/BP_TargetDummy.BP_TargetDummy;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/UI/WBP_AmmoInfo
-MRUItem1=/Game/Blueprints/Weapons/BP_Rifle
-MRUItem2=/Game/Powerups/Pickup/BP_WeaponPickup
-MRUItem3=/Game/Powerups/Pickup/BP_TestPickup
-MRUItem4=/Game/Powerups/Pickup/BP_PowerupPickup
-MRUItem5=/Game/Powerups/BP_HealthRegenerationPowerup2
-MRUItem6=/Game/Powerups/c++/BP_HealthRegenerationPowerup2
-MRUItem7=/Game/Powerups/c++/BP_SuperSpeedPowerup2
-MRUItem8=/Game/Powerups/c++/NewBlueprint
-MRUItem9=/Game/Powerups/c++/bpwoe
-MRUItem10=/Game/Powerups/c++/bppower
-MRUItem11=/Game/Powerups/c++/bppow
-MRUItem12=/Game/Blueprints/Characters/BP_PlayerPawn
-MRUItem13=/Game/Blueprints/Characters/BP_TargetDummy
-MRUItem14=/Game/TrackerBot/BP_TrackerBot
-MRUItem15=/Game/Powerups/BP_PowerupBase
-MRUItem16=/Game/Powerups/BP_HealthRegenerationPowerup
-MRUItem17=/Game/Powerups/BP_SuperSpeedPowerup
-MRUItem18=/Game/Powerups/c++/NewBlueprint1
-MRUItem19=/Game/Blueprints/Miscellaneous/BP_ExplosiveBarrel
+MRUItem0=/Game/Blueprints/GameModes/EQS_FindSpawnLocation
+MRUItem1=/Game/Blueprints/GameModes/BP_TestGameMode
+MRUItem2=/Game/UI/WBP_AmmoInfo
+MRUItem3=/Game/Blueprints/Weapons/BP_Rifle
+MRUItem4=/Game/Powerups/Pickup/BP_WeaponPickup
+MRUItem5=/Game/Powerups/Pickup/BP_TestPickup
+MRUItem6=/Game/Powerups/Pickup/BP_PowerupPickup
+MRUItem7=/Game/Powerups/BP_HealthRegenerationPowerup2
+MRUItem8=/Game/Powerups/c++/BP_HealthRegenerationPowerup2
+MRUItem9=/Game/Powerups/c++/BP_SuperSpeedPowerup2
+MRUItem10=/Game/Powerups/c++/NewBlueprint
+MRUItem11=/Game/Powerups/c++/bpwoe
+MRUItem12=/Game/Powerups/c++/bppower
+MRUItem13=/Game/Powerups/c++/bppow
+MRUItem14=/Game/Blueprints/Characters/BP_PlayerPawn
+MRUItem15=/Game/Blueprints/Characters/BP_TargetDummy
+MRUItem16=/Game/TrackerBot/BP_TrackerBot
+MRUItem17=/Game/Powerups/BP_PowerupBase
+MRUItem18=/Game/Powerups/BP_HealthRegenerationPowerup
+MRUItem19=/Game/Powerups/BP_SuperSpeedPowerup
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/BP_PlayerPawn.BP_PlayerPawn=0
@@ -4420,5 +4429,29 @@ ImportUniformScale=1.000000
 bConvertScene=True
 bForceFrontXAxis=False
 bConvertSceneUnit=False
+
+[/Script/UnrealEd.EditorExperimentalSettings]
+bProceduralFoliage=False
+bEnableLocalizationDashboard=True
+bEnableTranslationPicker=False
+bEnableEditorUtilityBlueprints=False
+bEnableFavoriteSystem=False
+ConsoleForGamepadLabels=None
+bDrawMidpointArrowsInBlueprints=False
+bContextMenuChunkAssignments=False
+bDisableCookInEditor=False
+bSharedCookedBuilds=False
+MultiProcessCooking=0
+bEQSEditor=True
+bAllowLateJoinInPIE=False
+bAllowVulkanPreview=False
+bEnableMultithreadedLightmapEncoding=False
+bEnableMultithreadedShadowmapEncoding=False
+bUseOpenCLForConvexHullDecomp=False
+bAllowPotentiallyUnsafePropertyEditing=False
+bFacialAnimationImporter=False
+bMobilePIEPreviewDeviceLaunch=False
+bTextAssetFormatSupport=False
+bEnableLongPathsSupport=False
 
 
