Created a new query context providing target points.

--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -3727,12 +3727,16 @@ BP_WeaponPickup_C.Decal=True
 BP_WeaponPickup_C.Sockets=True
 BP_WeaponPickup_C.Events=True
 BP_WeaponPickup_C.Pickup Actor=True
+EnvQueryGenerator_SimpleGrid.Generator=True
+EnvQueryGenerator_SimpleGrid.Option=True
+EditorKeyboardShortcutSettings.EnvQueryEditor.Profiler=True
 
 [AssetEditorManager]
 CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
 OpenAssetsAtExit=/Game/Blueprints/GameModes/BP_TestGameMode.BP_TestGameMode
 OpenAssetsAtExit=/Game/Blueprints/GameModes/EQS_FindSpawnLocation.EQS_FindSpawnLocation
+OpenAssetsAtExit=/Game/Blueprints/GameModes/EnvQueryContext_BotSpawns.EnvQueryContext_BotSpawns
 
 [RootWindow]
 ScreenPosition=X=470.000 Y=198.000
@@ -4051,26 +4055,26 @@ RecentlyPlaced=/Game/Weapons/Effects/BasicTracer/P_SmokeTrail.P_SmokeTrail;
 RecentlyPlaced=/Game/Blueprints/BP_TargetDummy.BP_TargetDummy;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/GameModes/EQS_FindSpawnLocation
-MRUItem1=/Game/Blueprints/GameModes/BP_TestGameMode
-MRUItem2=/Game/UI/WBP_AmmoInfo
-MRUItem3=/Game/Blueprints/Weapons/BP_Rifle
-MRUItem4=/Game/Powerups/Pickup/BP_WeaponPickup
-MRUItem5=/Game/Powerups/Pickup/BP_TestPickup
-MRUItem6=/Game/Powerups/Pickup/BP_PowerupPickup
-MRUItem7=/Game/Powerups/BP_HealthRegenerationPowerup2
-MRUItem8=/Game/Powerups/c++/BP_HealthRegenerationPowerup2
-MRUItem9=/Game/Powerups/c++/BP_SuperSpeedPowerup2
-MRUItem10=/Game/Powerups/c++/NewBlueprint
-MRUItem11=/Game/Powerups/c++/bpwoe
-MRUItem12=/Game/Powerups/c++/bppower
-MRUItem13=/Game/Powerups/c++/bppow
-MRUItem14=/Game/Blueprints/Characters/BP_PlayerPawn
-MRUItem15=/Game/Blueprints/Characters/BP_TargetDummy
-MRUItem16=/Game/TrackerBot/BP_TrackerBot
-MRUItem17=/Game/Powerups/BP_PowerupBase
-MRUItem18=/Game/Powerups/BP_HealthRegenerationPowerup
-MRUItem19=/Game/Powerups/BP_SuperSpeedPowerup
+MRUItem0=/Game/Blueprints/GameModes/EnvQueryContext_BotSpawns
+MRUItem1=/Game/Blueprints/GameModes/NewBlueprint
+MRUItem2=/Game/Blueprints/GameModes/EQS_FindSpawnLocation
+MRUItem3=/Game/Blueprints/GameModes/BP_TestGameMode
+MRUItem4=/Game/UI/WBP_AmmoInfo
+MRUItem5=/Game/Blueprints/Weapons/BP_Rifle
+MRUItem6=/Game/Powerups/Pickup/BP_WeaponPickup
+MRUItem7=/Game/Powerups/Pickup/BP_TestPickup
+MRUItem8=/Game/Powerups/Pickup/BP_PowerupPickup
+MRUItem9=/Game/Powerups/BP_HealthRegenerationPowerup2
+MRUItem10=/Game/Powerups/c++/BP_HealthRegenerationPowerup2
+MRUItem11=/Game/Powerups/c++/BP_SuperSpeedPowerup2
+MRUItem12=/Game/Powerups/c++/NewBlueprint
+MRUItem13=/Game/Powerups/c++/bpwoe
+MRUItem14=/Game/Powerups/c++/bppower
+MRUItem15=/Game/Powerups/c++/bppow
+MRUItem16=/Game/Blueprints/Characters/BP_PlayerPawn
+MRUItem17=/Game/Blueprints/Characters/BP_TargetDummy
+MRUItem18=/Game/TrackerBot/BP_TrackerBot
+MRUItem19=/Game/Powerups/BP_PowerupBase
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/BP_PlayerPawn.BP_PlayerPawn=0
