Placed a target point in the map so the test pawn is able to spawn around it.

--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -3763,6 +3763,14 @@ BP_EQSTestingPawn_C.MovementComponent=True
 BP_EQSTestingPawn_C.Shape=True
 BP_EQSTestingPawn_C.Navigation=True
 BP_EQSTestingPawn_C.Character=True
+TargetPoint.TransformCommon=True
+TargetPoint.Sprite=True
+TargetPoint.Rendering=True
+TargetPoint.Tags=True
+TargetPoint.Cooking=True
+TargetPoint.Replication=True
+TargetPoint.Input=True
+TargetPoint.Actor=True
 
 [AssetEditorManager]
 CleanShutdown=False
@@ -4069,6 +4077,7 @@ BP_EQSTestingPawn_C="\"Object.Character.Mesh.Object.Collision.BodyInstance.Walka
 EQSTestingPawn="\"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 
 [PlacementMode]
+RecentlyPlaced=/Script/Engine.TargetPoint;/Engine/Transient.ActorFactoryTargetPoint_0
 RecentlyPlaced=/Game/Blueprints/GameModes/BP_EQSTestingPawn.BP_EQSTestingPawn;
 RecentlyPlaced=/Game/Powerups/Pickup/BP_WeaponPickup.BP_WeaponPickup;
 RecentlyPlaced=/Game/Powerups/Pickup/BP_PowerupPickup.BP_PowerupPickup;
@@ -4088,7 +4097,6 @@ RecentlyPlaced=/Game/Blueprints/BP_PlayerPawn.BP_PlayerPawn;
 RecentlyPlaced=/Game/Blueprints/BP_Projectile.BP_Projectile;
 RecentlyPlaced=/Game/Blueprints/BP_GrenadeLauncher.BP_GrenadeLauncher;
 RecentlyPlaced=/Game/Weapons/Effects/BasicTracer/P_SmokeTrail.P_SmokeTrail;
-RecentlyPlaced=/Game/Blueprints/BP_TargetDummy.BP_TargetDummy;
 
 [ContentBrowserRecent]
 MRUItem0=/Game/Blueprints/GameModes/EnvQueryContext_BotSpawns
